<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/moviesFragment">

    <fragment
        android:id="@+id/moviesFragment"
        android:name="com.example.tmdbmovies.feature.discover.DiscoverFragment"
        android:label="@string/movies_title">
        <action
            android:id="@+id/action_moviesFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
        <action
            android:id="@+id/action_moviesFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
        <action
            android:id="@+id/action_moviesFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.example.tmdbmovies.feature.details.MovieDetailsFragment"
        android:label="@string/details_title">
        <argument
            android:name="movieId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.tmdbmovies.feature.favorites.FavoritesFragment"
        android:label="@string/favorites_title">
        <action
            android:id="@+id/action_favoritesFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.tmdbmovies.feature.profile.ProfileFragment"
        android:label="@string/profile_title" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.tmdbmovies.feature.movies.MoviesFragment"
        android:label="@string/search_title">
        <argument
            android:name="searchMode"
            android:defaultValue="true"
            app:argType="boolean" />
        <action
            android:id="@+id/action_searchFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment" />
    </fragment>
</navigation>
